enforce role propagation and gateway token relay